Reader: Fix IE11 squashed twemoji bug everywhere
Fix all squashed IE11 emoji regardless of where they are.  #6230ce6 fixed only emoji in .tiled-gallery-caption

Ref: #10028

--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -321,11 +321,6 @@
 		bottom: 2px;
 		left: 2px;
 		right: 2px;
-
-	img.emoji {
-		width: 1em;
-		height: 1em;
-	}
 }
 
 .tiled-gallery .tiled-gallery-item-small .tiled-gallery-caption { /* Smaller captions */
